--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.jonaxel.draweractivity.MainFragmentActivity"
+            android:name="com.jonaxel.draweractivity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +18,7 @@
         </activity>
         <activity
             android:theme="@style/MyTheme.ActionBar"
-            android:name="com.jonaxel.draweractivity.MainActivity2"
+            android:name="com.jonaxel.draweractivity.MainFragmentActivity"
             android:label="@string/title_activity_main_activity2"
             android:parentActivityName="com.jonaxel.draweractivity.MainActivity" >
             <!-- Parent activity meta-data to support 4.0 and lower -->
