--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.0.0@aar'
+    compile 'com.google.android.gms:play-services:6.1.+'
 }
